# irsentry

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  README.md  diff  test
cmake/: ANTLR4Setup.cmake  LLVMSetup.cmake  Z3Setup.cmake
examples/c/target1/: target1.ll
examples/rust/target1/: target1.ll  target1.rs
generators/: generate_valueinstr_ifs.py  generate_valueinstr_structs.py  settings.json  valueinstrs.g4
src/: IRSentry.cpp  IRSentry.h  config.h  main.cpp
src/combined_antlr/: LLVMIRBaseVisitor.cpp  LLVMIRBaseVisitor.h  LLVMIRLexer.cpp  LLVMIRLexer.h  LLVMIRParser.cpp  LLVMIRParser.h  LLVMIRVisitor.cpp  LLVMIRVisitor.h
src/llvm_ir/: SourceCodeReader.cpp  SourceCodeReader.h
src/llvm_ir/antlr4/: LLVMLexer.cpp  LLVMLexer.g4  LLVMLexer.h  LLVMLexer.interp  LLVMParser.cpp  LLVMParser.g4  LLVMParser.h  LLVMParser.interp  LLVMParser.tokens  LLVMParserBaseVisitor.cpp  LLVMParserBaseVisitor.h  LLVMParserVisitor.cpp  LLVMParserVisitor.h
src/llvm_ir/parsers/: CmpPredParser.cpp  CmpPredParser.h  FunctionParser.cpp  FunctionParser.h  InstructionParser.cpp  InstructionParser.h  ModuleParser.cpp  ModuleParser.h  TypeParser.cpp  TypeParser.h  ValueParser.cpp  ValueParser.h
src/llvm_ir/transforms/: BaseModulePass.h  BreakConstantExpressions.h  IRTransformer.cpp  IRTransformer.h
src/llvm_ir/transforms/passes/: BreakConstExprPass.cpp  BreakConstExprPass.h
src/llvm_ir/visitors/: FunctionExtractionVisitor.cpp  FunctionExtractionVisitor.h  FunctionExtractorVisitor.cpp  FunctionExtractorVisitor.h
src/parsers/: FunctionParser.cpp  FunctionParser.h  InstructionParser.cpp  InstructionParser.h
src/seperated_antlr/: LLVMLexer.cpp  LLVMLexer.g4  LLVMLexer.h  LLVMLexer.interp  LLVMParser.cpp  LLVMParser.g4  LLVMParser.h  LLVMParser.interp  LLVMParser.tokens  LLVMParserBaseVisitor.h  LLVMParserVisitor.h
src/symbolic_engine/: SymbolicEngine.cpp  SymbolicEngine.h  SymbolicState.cpp  SymbolicState.h
src/symbolic_engine/cfg/: CFGBuilder.cpp  CFGBuilder.h
src/symbolic_engine/cfg/debug/: CFGDotPrinter.cpp  CFGDotPrinter.h
src/symbolic_engine/instructions/: AddInstruction.h  AllocaInstruction.h  BaseInstruction.h  FAddInstruction.h  FDivInstruction.h  FMulInstruction.h  FRemInstruction.h  FSubInstruction.h  Instructions.h  MulInstruction.h  SDivInstruction.h  SRemInstruction.h  UDivInstruction.h  URemInstruction.h
src/symbolic_engine/instructions/bit/: AShrInstruction.h  AndInstruction.h  BitwiseInstruction.h  LShrInstruction.h  OrInstruction.h  ShlInstruction.h  XorInstruction.h
src/symbolic_engine/instructions/branch/: CallInstruction.h
src/symbolic_engine/instructions/cast/: CastInstruction.h
src/symbolic_engine/module/: FunctionInfo.h  ModuleInfo.h
src/symbolic_engine/path_finder/: InstructionTranslator.cpp  InstructionTranslator.h  PathFinder.cpp  PathFinder.h  ValueTranslator.cpp  ValueTranslator.h  Z3Utils.h
src/symbolic_engine/printers/: ResultPrinter.cpp  ResultPrinter.h
src/symbolic_engine/scanner/: BaseHotSpotScannerPass.h  BaseInputScannerPass.h  HotSpotScanner.cpp  HotSpotScanner.h  InputScanner.cpp  InputScanner.h
src/symbolic_engine/translators/: InstructionTranslator.cpp  InstructionTranslator.h  ValueTranslator.cpp  ValueTranslator.h
src/symbolic_engine/types/: ArrayType.cpp  ArrayType.h  BaseType.h  FloatType.cpp  FloatType.h  IntX.cpp  IntX.h  IntegerType.cpp  IntegerType.h  SEETypeDef.cpp  SEETypeDef.h  SIRType.cpp  SIRType.h  Types.h  UIntegerType.cpp  UIntegerType.h
src/symbolic_engine/variables/: Value.cpp  Value.h  Variable.h
src/symbolic_engine/visitors/: InstructionVisitorBase.h
src/tui/: TUIRenderer.cpp  TUIRenderer.h
src/utilities/: Logger.cpp  Logger.h
src/utilities/helpers/: LLVMHelper.cpp  LLVMHelper.h  Z3Helper.cpp  Z3Helper.h
src/visitors/: FunctionExtractorVisitor.cpp  FunctionExtractorVisitor.h
tests/c/args/: args-whole.bc  args.bc  args.c  args.ll  args.s  args2.ll
tests/c/http/: http.c
tests/c/init_perf1/: init_perf1.c  init_perf1.ll
tests/c/init_perf2/: init_perf2.c  init_perf2.ll
tests/c/phi/: phi.cpp  phi.ll
tests/c/string/: a.out  str.c  str.ll
tests/c/target1/: target1.c  target1.ll
tests/c/target2/: target2.c  target2.ll
tests/c/target3/: target3.c  target3.ll
tests/c/zip/: zip  zip.c  zip.ll
tests/llvm_ir/target1/: target1.ll
tests/rust/target1/: target1.ll
(+45 files in other folders)
